# local-secrets-guard

./: README.md  README.ru.md  main.py  pyproject.toml
src/local_secrets_guard/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
