[project]
name = "local-secrets-guard"
version = "0.1.0"
requires-python = ">=3.10"
description = "Local scanner for potential secret leaks"

[project.scripts]
local-secrets-guard = "local_secrets_guard.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
